--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,51 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+            <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
+            <title>{% block title %}Welcome!{% endblock %}</title>
+
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost:8000/about">À propos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="http://localhost:8000/gestionclient">Gestion Clients</a>
+            </li>
+            
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8000/gestionfacture"> Gestion Facture</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8000/gestionrdv"> Gestion Rendez_Vous</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="http://localhost:8000/gestionchantier"> Gestion Chantier</a>
+            </li>
+            
+            
+          </ul>
+        
+      </div>
+    </nav>
+
+    <main role="main" class="container">
+      <div class="jumbotron">
+          {% block body %}{% endblock %} 
+        </div>
+    </main>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
